--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,16 +152,23 @@ a{
 .subtitulo{
   color: var(--cor-texto);
 }
+
 .rodape{
   background-color: var(--cor-texto);
   display: flex;
   justify-content: center;
-  margin: 0;
+  align-items: center;
+  padding: 1rem 3%;
+  flex-direction: column;
+  gap: 1rem;
 }
 .logo__alura{
-  text-align: center;
-  padding-top: 8px;
+  width: 100px;
 }
-.rodape p, #rodape{
+.footer, #rodape{
   color: var(--cor-primaria);
+  font-size: 18px;
+  font-family: 'Courier New', Courier, monospace;
+  text-decoration: none;
 }
+
