--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-track {
   background: var(--cor-secundaria); 
   border-radius: 20px;
+  scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -26,14 +27,13 @@ nav {
   justify-content: center;
   position: fixed; 
   background-color: var(--cor-primaria);
-  padding: 0.6rem;
   border-bottom: 2px solid var(--cor-secundaria);
   
 }
 .nav-item {
   display: flex;
   justify-content: space-between;
-  margin: 0.5rem;
+  margin: 0.3rem;
   padding: 0 30px 0 30px;
 }
 
@@ -57,12 +57,15 @@ nav {
 .conteudo{
   padding: 1rem 3rem 4rem 0;  
 }
+.conteudo-projeto{
+  text-align: center;
+}
 
 h1 {
   font-family: "Do Hyeon", sans-serif;
   color: var(--cor-secundaria);
   font-size: 50px;
-  padding-bottom: 20px;
+  padding: 0 20px  20px 0;
 }
 
 #nome-autor::after {
@@ -82,15 +85,15 @@ h1 {
   }
 }
 .resumoBio {
-  width: 640px;
-  height: 210px;
+  width: 100%;
+  height: 180px;
   font-family: Lato;
   color: var(--cor-texto);
   font-size: 24px;
   display: flex;
   text-align: justify;
 }
-p {
+.p {
     font-family: Lato;
     font-size: 24px;
     color: var(--cor-texto);
@@ -100,19 +103,20 @@ p {
 
 }
 .imagemEu {
-  width: 300px;
-  height: 400px;
+  width: 250px;
+  height: 325px;
   border: 5px solid var(--cor-secundaria);
   border-radius: 16px;
   padding: 16px;
+
   
 }
 #img {
   border-radius: 16px;
-  width: 300px;
+  width: 250px;
+  height: 350px;
 }
 .botao-container{
-  width: 600px;
   height: 70px;
   display: flex;
   flex-direction: row;
@@ -129,7 +133,7 @@ a{
 }
 .redes{
   height: 58px;
-  width: 180px; 
+  width: 200px; 
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -138,6 +142,9 @@ a{
   border-radius: 8px;
   margin: 1rem;
    
+}
+#icon{ 
+  padding: 10px;
 }
 .redes:hover{
   text-decoration: none;
@@ -152,6 +159,154 @@ a{
 .subtitulo{
   color: var(--cor-texto);
 }
+
+
+
+
+
+.row {
+  font-family: "Do Hyeon", sans-serif;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.col-sm-6 {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 50%;
+  -ms-flex: 0 0 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
+}
+.col-md-3 {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 25%;
+  -ms-flex: 0 0 25%;
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+.col-md-4 {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 33.33333%;
+  -ms-flex: 0 0 33.33333%;
+  flex: 0 0 33.33333%;
+  max-width: 33.33333%;
+}
+
+.custom-card {
+  border-radius: 0.25rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.custom-card .card-body {
+  padding: 55px 0;
+}
+
+.custom-card .card-body i {
+  display: block;
+  font-size: 40px;
+  margin-bottom: 18px;
+  color: var(--cor-secundaria);
+}
+
+.custom-card:hover,
+.custom-card:active {
+  background: var(--cor-secundaria);
+  color: #fff;
+}
+
+.custom-card:hover i,
+.custom-card:active i {
+  color: #fff;
+}
+
+.col-sm-4 {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 33.33333%;
+  -ms-flex: 0 0 33.33333%;
+  flex: 0 0 33.33333%;
+  max-width: 33.33333%;
+}
+.img-wrapper {
+  position: relative;
+  border-radius: 0.25rem;
+  overflow: hidden;
+  margin-bottom: 30px;
+  display: block;
+  display: block;
+}
+
+.img-wrapper img {
+  position: relative;
+  width: 100%;
+  z-index: 8;
+}
+
+.img-wrapper .overlay {
+  background: rgba(248, 192, 24, 0.7);
+  position: absolute;
+  left: 0;
+  bottom: 100%;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.img-wrapper .overlay .overlay-infos {
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-transition-delay: .2s;
+  transition-delay: .2s;
+  color: #fff;
+}
+
+.img-wrapper .overlay .overlay-infos h5 {
+  margin-bottom: 15px;
+}
+
+.img-wrapper .overlay .overlay-infos a {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  line-height: 35px;
+  text-align: center;
+  color: #fff;
+  text-decoration: none;
+}
+
+.img-wrapper .overlay .overlay-infos a:hover {
+  background: #fff;
+  color: var(--priya-yellow);
+}
+
+.img-wrapper:hover .overlay,
+.img-wrapper:active .overlay {
+  bottom: 0;
+  visibility: visible;
+  opacity: 1;
+}
+
+.img-wrapper:hover .overlay .overlay-infos,
+.img-wrapper:active .overlay .overlay-infos {
+  top: 50%;
+}
+
 
 .rodape{
   background-color: var(--cor-texto);
@@ -171,4 +326,3 @@ a{
   font-family: 'Courier New', Courier, monospace;
   text-decoration: none;
 }
-
