--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,20 +25,20 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed; 
+  position: fixed;
+  top: 0;
   background-color: var(--cor-primaria);
-  border-bottom: 2px solid var(--cor-secundaria);
-  
+  border-bottom: 1px solid var(--cor-secundaria);
+  z-index: 1030; 
 }
+
 .nav-item {
-  display: flex;
-  justify-content: space-between;
   margin: 0.3rem;
-  padding: 0 30px 0 30px;
+  padding: 0 30px;
 }
 
 .nav-link {
-  font-family: "Do Hyeon";
+  font-family: "Do Hyeon", sans-serif;
   color: var(--cor-secundaria);
   font-size: 25px;
 }
@@ -46,9 +46,20 @@ nav {
 .nav-link:hover {
   color: var(--cor-texto);
 }
+
+.navbar-toggler{
+  border-color: var(--cor-secundaria);
+  padding: 5px;
+}
+.navbar-toggler-icon {
+  color: var(--cor-secundaria);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .container {
   width: 100vw;
-  padding-top: 6%;
+  padding-top: 4%;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -86,20 +97,26 @@ h1 {
 }
 .resumoBio {
   width: 100%;
-  height: 180px;
   font-family: Lato;
   color: var(--cor-texto);
   font-size: 24px;
   display: flex;
   text-align: justify;
+  justify-content: space-between;
 }
+#resumo-habilidades{
+  padding: 10px;
+  display: flex;
+  flex-direction:initial;
+}
+
 .p {
     font-family: Lato;
     font-size: 24px;
     color: var(--cor-texto);
     text-align: center;
     line-height: 30px;
-    padding: 0 1.5rem 2rem 0;
+    padding:2rem;
 
 }
 .imagemEu {
@@ -107,7 +124,7 @@ h1 {
   height: 325px;
   border: 5px solid var(--cor-secundaria);
   border-radius: 16px;
-  padding: 16px;
+  padding: 15px;
 
   
 }
@@ -116,11 +133,25 @@ h1 {
   width: 250px;
   height: 350px;
 }
+
+.imagem-habilidades {
+  width: 250px;
+  height: 250px;
+  background-color: var(--cor-secundaria);
+  border-radius: 100%;
+  padding: 16px;
+
+  
+}
+#imagem-habilidades {
+  border-radius: 16px;
+  width: 250px;
+  height: 250px;
+  flex-grow: 1;
+}
 .botao-container{
-  height: 70px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  width: 50%;
+  padding-left: 25%;
 }
 
 a{
@@ -160,8 +191,10 @@ a{
   color: var(--cor-texto);
 }
 
+/*responsivo page 1*/
+@media screen and (max-width: 768px) {
 
-
+}
 
 
 .row {
@@ -224,90 +257,6 @@ a{
   color: #fff;
 }
 
-.col-sm-4 {
-  -webkit-box-flex: 0;
-  -webkit-flex: 0 0 33.33333%;
-  -ms-flex: 0 0 33.33333%;
-  flex: 0 0 33.33333%;
-  max-width: 33.33333%;
-}
-.img-wrapper {
-  position: relative;
-  border-radius: 0.25rem;
-  overflow: hidden;
-  margin-bottom: 30px;
-  display: block;
-  display: block;
-}
-
-.img-wrapper img {
-  position: relative;
-  width: 100%;
-  z-index: 8;
-}
-
-.img-wrapper .overlay {
-  background: rgba(248, 192, 24, 0.7);
-  position: absolute;
-  left: 0;
-  bottom: 100%;
-  width: 100%;
-  height: 100%;
-  z-index: 9;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-.img-wrapper .overlay .overlay-infos {
-  position: absolute;
-  top: 0%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  -webkit-transition-delay: .2s;
-  transition-delay: .2s;
-  color: #fff;
-}
-
-.img-wrapper .overlay .overlay-infos h5 {
-  margin-bottom: 15px;
-}
-
-.img-wrapper .overlay .overlay-infos a {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  border: 2px solid #fff;
-  line-height: 35px;
-  text-align: center;
-  color: #fff;
-  text-decoration: none;
-}
-
-.img-wrapper .overlay .overlay-infos a:hover {
-  background: #fff;
-  color: var(--priya-yellow);
-}
-
-.img-wrapper:hover .overlay,
-.img-wrapper:active .overlay {
-  bottom: 0;
-  visibility: visible;
-  opacity: 1;
-}
-
-.img-wrapper:hover .overlay .overlay-infos,
-.img-wrapper:active .overlay .overlay-infos {
-  top: 50%;
-}
-
-
 .rodape{
   background-color: var(--cor-texto);
   display: flex;
@@ -325,4 +274,102 @@ a{
   font-size: 18px;
   font-family: 'Courier New', Courier, monospace;
   text-decoration: none;
+}
+/* Media Queries para responsividade */
+
+@media (max-width: 1200px) {
+  .nav-item {
+    padding: 0 15px;
+  }
+
+  .nav-link {
+    font-size: 20px;
+  }
+
+  .conteudo {
+    padding: 1rem 2rem 3rem 0;
+  }
+
+  .p {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .imagemEu, #img {
+    width: 200px;
+    height: auto;
+  }
+
+  .titulo {
+    font-size: 40px;
+  }
+
+  .resumoBio {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav-item {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .container {
+    flex-direction: column;
+    padding-top: 8%;
+  }
+
+  .conteudo {
+    padding: 1rem;
+  }
+
+  .botao-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .redes {
+    width: 150px;
+  }
+}
+
+@media (max-width: 576px) {
+  .nav-link {
+    font-size: 18px;
+  }
+
+  .titulo {
+    font-size: 35px;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  .resumoBio {
+    font-size: 18px;
+    height: auto;
+  }
+
+  .p {
+    font-size: 18px;
+  }
+
+  .imagemEu, #img {
+    width: 150px;
+    height: auto;
+  }
+
+  .redes {
+    width: 120px;
+  }
+
+  .rodape {
+    padding: 0.5rem 2%;
+  }
+
+  .footer, #rodape {
+    font-size: 16px;
+  }
 }
